<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save"
        app:layout_constraintBottom_toBottomOf="@+id/save"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:textColor="#4b09f3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/login" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="Имя или никнейм" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/change_pas"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/change_pass"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:textColor="#4b09f3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#B00020"
        android:text="@string/go_away"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>